--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
 }
 
-a {
+.a {
   cursor: pointer;
   text-decoration: none !important;
   color: white !important;
